--- a/main.css
+++ b/main.css
@@ -8,6 +8,10 @@ label{
     margin-bottom:0.2rem;    
 }
 
+input[type='number'] {
+    -moz-appearance:textfield;
+}
+
 div {
     display: block;
     margin: 0.2rem;
